--- a/wrangler.toml
+++ b/wrangler.toml
@@ -10,13 +10,14 @@ binding = "AI"
 # 然后替换下面的 id 和 preview_id
 [[kv_namespaces]]
 binding = "CHAT_HISTORY"
-id = "自己的KV ID"
+id = "ef23d7ce25994130a352c80727d9d259"
 preview_id = "自己的KV ID"
 
 # 环境变量配置
 # 部署前请修改为安全的密码
 [vars]
-CHAT_PASSWORD = "自己的密码"
+CHAT_PASSWORD = "ascejul"
+
 
 
 
