--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,12 +11,13 @@ binding = "AI"
 [[kv_namespaces]]
 binding = "CHAT_HISTORY"
 id = "ef23d7ce25994130a352c80727d9d259"
-preview_id = "自己的KV ID"
+preview_id = "ef23d7ce25994130a352c80727d9d259"
 
 # 环境变量配置
 # 部署前请修改为安全的密码
 [vars]
 CHAT_PASSWORD = "ascejul"
+
 
 
 
